Fix TOC margins on small devices

--- a/index.scss
+++ b/index.scss
@@ -91,7 +91,8 @@ code {
 	@include small-width {
 		font-size: 1.3em;
 		display: flex;
-		justify-content: center;
+		flex-direction: column;
+		align-items: center;
 	}
 }
 
